<resources>
    <string name="app_name">Vinoteka</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="pogre_an_e_mail_format">Pogrešan e-mail format</string>
    <string name="e_mail">E-mail</string>
    <string name="vinoteka">Vinoteka</string>
    <string name="professional_wine_selector">Professional wine selector</string>
    <string name="cijena_1_s_eur">%1$s €</string>
    <string name="dodaj_vino">Dodaj vino</string>
    <string name="name">Name</string>
    <string name="harvest">Harvest</string>
    <string name="alcohol_percentage">Alcohol percentage</string>
    <string name="maltster">Maltster</string>
    <string name="quality">Quality</string>
    <string name="wineyard">Wineyard</string>
    <string name="gastro_recommendation">Gastro recommendation</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_wine">Add wine</string>
    <string name="wine_details">Wine details</string>
    <string name="sort">Sort</string>
    <string name="id_1_s">Id: %1$s</string>
    <string name="status_1_s">Status: %1$s</string>
    <string name="total_price_1_s">Total price: %1$s</string>
    <string name="payment_method_1_s">Payment method: %1$s</string>
    <string name="timestamp_1_s">Timestamp: %1$s</string>
    <string name="update_wine">Update wine</string>
    <string name="orders">Orders</string>
    <string name="temperature_of_serving">Temperature of serving</string>
</resources>