<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/wine_glass"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/holland_land"
        android:textAlignment="center"
        android:text="@string/vinoteka"
        android:textColor="@color/bgColor"
        android:textSize="100sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monorita_regular"
        android:text="@string/e_mail"
        android:textColor="@color/bgColor"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_email_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:fontFamily="@font/monorita_medium"
        android:text="@string/pogre_an_e_mail_format"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/CustomBtn"
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/prijavi_se"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>